--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, icecast2, python-xml, python-shout, libshout3, python-mutagen
 Description: easy and light media streaming tool
  DeeFuzz Tools are new light and easy tools to stream audio and video over internet. It is dedicated to people who wants to create playlisted webradios or webTVs with rich media contents. Here are the main features of the DeeFuzz Tools:
- * MP3 and OGG (audio & video) streaming over internet
+ * MP3 and OGG (audio & video) file streaming over internet
  * Full metadata encapsulation and management
  * RSS podcast feeding (current tracks and playlists)
  * M3U playlist feefing
