--- a/example/deefuzzer.yaml
+++ b/example/deefuzzer.yaml
@@ -1,6 +1,6 @@
 deefuzzer:
-  log: /path/to/log/mystation.log
-  m3u: /path/to/m3u/mystation.m3u
+  log: mystation.log
+  m3u: mystation.m3u
 
   station:
     control: {mode: 0,
