--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-# command to install dependencies
-install: 
- - "pip install -r requirements.txt --use-mirrors"
+virtualenv:
+  system_site_packages: true
+
+# command to prepare the system to install prerequisites or dependencies
+before_install:
+ - sudo apt-get install python-setuptools
+ - sudo apt-get install -qq python-liblo python-mutagen python-pycurl
 
 # command to run tests
 script:
