add deps for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ virtualenv:
 # command to prepare the system to install prerequisites or dependencies
 before_install:
  - sudo apt-get install python-setuptools
- - sudo apt-get install -qq python-liblo python-mutagen python-pycurl
+ - sudo apt-get install -qq libshout3-dev python-liblo python-mutagen python-pycurl
 
 # command to run tests
 script:
