Added stationdefaults parameter (provides a mechanism to give default values for all stations) New merge_defaults function in utils.py - combines two dict objects recursively
Signed-off-by: achbed <github@achbed.org>

--- a/example/deefuzzer.yaml
+++ b/example/deefuzzer.yaml
@@ -2,6 +2,14 @@ deefuzzer:
   log: /path/to/station.log
   m3u: /path/to/station.m3u
 
+  stationdefaults:
+    control: {mode: 0,
+             port: 16001}
+
+    jingles: {dir: /path/to/jingles,
+              mode: 0,
+              shuffle: 1}
+
   station:
     control: {mode: 0,
              port: 16001}
