Changes based on ChoiZ's mode_playing branch
Station: media.dir now overrides media.m3u if both are specified and non-blank
Station: Noted media.m3u and media.dir options as depreciated (uses them if present for smooth upgrade path)
Station: Combine media.m3u and media.dir options into one new media.source option
Station: media.source is now checked to see if it's a file or folder at load time, and playlist or folder list mode is selected automatically
Core: Updated to reflect new source setting when using station autocreation

Signed-off-by: achbed <github@achbed.org>

--- a/example/deefuzzer.yaml
+++ b/example/deefuzzer.yaml
@@ -25,9 +25,8 @@ deefuzzer:
               shuffle: 1}
 
     media: {bitrate: 96,
-            dir: /path/to/mp3/,
+            source: /path/to/mp3/or/m3u,
             format: mp3,
-            m3u: /path/to/m3u_file,
             ogg_quality: 4,
             samplerate: 48000,
             shuffle: 0,
